# PDFTool

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
docs/: API_REFACTOR_SUMMARY.md  MIGRATION.md  PDF-2开发日志.md  PDF-3_REFACTOR.md  TODO.md  WIKI.md  重构文档.md
docs/debug/: 2025-09-15-页面选择功能与API服务调试.md  README.md
src/pdftool/: __init__.py  __main__.py
src/pdftool/api/: app.py  dependencies.py  main.py  service_registry.py  templates.py
src/pdftool/api/handlers/: split.py  watermark.py
src/pdftool/api/middleware/: __init__.py  cors.py  error_handler.py  logging.py
src/pdftool/api/routers/: docs.py  health.py  pdf.py  web.py
src/pdftool/api/schemas/: __init__.py  requests.py  responses.py
src/pdftool/api/services/: __init__.py  pdf_service.py
src/pdftool/api/templates/: extract.html  index.html  info.html  pages.html  split.html  watermark.html
src/pdftool/api/templates/static/css/: main.css
src/pdftool/common/: __init__.py  interfaces.py  models.py
src/pdftool/common/interfaces/: __init__.py  processor.py
src/pdftool/common/services/: __init__.py  operation_executor.py  resource_manager.py  service_provider.py
src/pdftool/common/utils/: __init__.py  logging.py  validators.py
src/pdftool/config/: settings.py
src/pdftool/core/: __init__.py  exceptions.py  factory.py  interfaces.py  models.py  operation_factory.py  pdf_operations.py  pdf_processor.py  processor.py  registry.py
src/pdftool/core/operations/: split.py
src/pdftool/domains/document/: __init__.py  models.py  validators.py
src/pdftool/domains/document/operations/: __init__.py  info.py  merge.py  password.py  split.py  watermark.py
src/pdftool/gui/: main.py
src/pdftool/interfaces/: __init__.py
src/pdftool/interfaces/cli/: __init__.py  commands.py  main.py
src/pdftool/interfaces/web/: __init__.py  application.py  dependencies.py  interfaces.py  main.py  service_manager.py  service_registry.py
src/pdftool/interfaces/web/handlers/: __init__.py  info.py  merge.py  password.py  split.py  watermark.py
src/pdftool/interfaces/web/middleware/: cors.py  error_handler.py  logging.py
src/pdftool/interfaces/web/routers/: docs.py  health.py  pdf.py  web.py
src/pdftool/interfaces/web/schemas/: requests.py  responses.py
src/pdftool/interfaces/web/templates/: base.html  index.html  merge.html  pages.html  password.html
src/pdftool/interfaces/web/templates/static/css/: main.css
src/pdftool/interfaces/web/templates/static/js/: common.js  upload.js
src/pdftool/plugins/: __init__.py  base.py  loader.py  registry.py
src/pdftool/utils/: logging.py  validators.py
tests/: test_pdf_operations.py
